--- a/src/components/ProjectShowcase/styles.module.css
+++ b/src/components/ProjectShowcase/styles.module.css
@@ -4,33 +4,37 @@
 }
 
 .projects {
+  box-sizing: content-box;
   background-color: black;
-  height: fit-content;
   width: 90%;
-  padding: 1rem;
+  padding: 1rem 1rem 0rem 1rem;
   display: grid;
   row-gap: 1rem;
   column-gap: 1rem;
-  min-height: 300px;
+  min-height: fit-content;
   grid-template-columns: auto auto auto auto;
-  grid-template-rows: auto;
+  grid-template-rows: auto auto;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 750px) {
   .projects {
-    grid-template-columns: auto;
-    width: 100%;
-    min-height: 400px;
-    grid-auto-rows: 250px;
-    padding: 0rem 1rem 1rem 1rem;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 1rem 1rem 1rem;
+
+  }
+  .projects > section {
+    height: 300px;
   }
 }
 
-@media (min-width: 701px) and (max-width: 1023px) {
+@media (min-width: 750.1px) and (max-width: 1123px) {
   .projects {
-    grid-template-columns: auto auto;
-    grid-template-rows: 250px 250px;
-    width: 100%;
-    min-height: 400px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1rem 0.5rem 1rem 1rem;
+  }
+  .projects > * {
+    width: 48%;
   }
 }
