--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,9 @@
+
 @import 'variables';
 
-
 @import 'globals';
+@import 'animations';
+
+//components
 @import 'components/header.scss';
+@import 'components/portfolio.scss';
