feat: hero text

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,9 @@
 
 @import 'globals';
 @import 'animations';
+@import 'breakpoints.scss';
 
 //components
 @import 'components/header.scss';
 @import 'components/portfolio.scss';
+@import 'components/hero.scss';
