--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -1,3 +1,19 @@
+$duration :1s;
+
+@keyframes slide-from-left {
+    0% {
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    50%{
+        transform: translateX(20px);
+        opacity: 1;
+    }
+    100%{
+
+    }
+}
+
 @keyframes slide-from-top {
     0% {
         transform: translatey(-100px);
@@ -12,6 +28,10 @@
     }
 }
 
+.slide-from-left{
+    animation: slide-from-left $duration normal;
+}
+
 .slide-from-top{
-    animation: slide-from-top 1s normal ;
+    animation: slide-from-top $duration normal;
 }
