feat: responsive hero and header text

--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -1,12 +1,14 @@
 .hero{
     height: 100vh;
     align-items: center;
+    justify-content: center;
+    text-align: center;
     @include breakpoint(medium){
         padding: 0px 5rem;
+        text-align: left;
     }
     &__text{
         position: relative;
-        left : 0px;
         h1{
             font-size: 2.8rem;
         }
