--- a/src/styles/components/portfolio.scss
+++ b/src/styles/components/portfolio.scss
@@ -5,5 +5,15 @@
         text-align: center;
         padding: 1rem 0rem;
         font-size: 3rem;
+        &::before, &::after{
+            content: '';
+            height: 2rem;
+            width: 2rem;
+            display: inline-block;
+            background-color: $secondary-color;
+            border-radius: 50%;
+            margin: 0rem 1rem;
+        }
     }
+    
 }
