feat: sliding banner component working

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,4 @@
 @import 'components/header.scss';
 @import 'components/portfolio.scss';
 @import 'components/hero.scss';
+@import 'components/marquee.scss';
