feat: card design starter

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,4 @@
 @import 'components/portfolio.scss';
 @import 'components/hero.scss';
 @import 'components/marquee.scss';
+@import 'components/card.scss';
