--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -8,6 +8,7 @@ header{
 header .top-section{
     text-align: center;
     padding: 1rem 1rem;
+    width: 100%;
 }
 
 header .top-section h1 {
@@ -24,12 +25,18 @@ header .top-section h3{
     width: 100%;
     display: flex;
     justify-content: center;
+
+
     ul{
         li{
             border-left: 1px solid $primary-color;
             border-right: 1px solid $primary-color;
             width: fit-content;
             padding: 1rem 2rem;
+            &:hover {
+                background-color: $accent-color;
+                color: $secondary-color;
+            }
         }
     }
 }
