feat: footer and more responsive designs

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,4 @@
 @import 'components/hero.scss';
 @import 'components/marquee.scss';
 @import 'components/card.scss';
+@import 'components/footer.scss';
