--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -6,6 +6,7 @@
     text-align: left;
     &__text{
         position: relative;
+        top: 5%;
         h1{
             font-size: 2.8rem;
         }
