--- a/src/styles/components/portfolio.scss
+++ b/src/styles/components/portfolio.scss
@@ -4,15 +4,22 @@
         color: $secondary-color;
         text-align: center;
         padding: 1rem 0rem;
-        font-size: 3rem;
+        font-size: 2rem;
+        @include breakpoint (medium){
+            font-size: 3rem;
+        }
         &::before, &::after{
             content: '';
-            height: 2rem;
-            width: 2rem;
+            height: 1.5rem;
+            width: 1.5rem;
             display: inline-block;
             background-color: $secondary-color;
             border-radius: 50%;
             margin: 0rem 1rem;
+            @include breakpoint (medium){
+                height: 2rem;
+                width: 2rem;
+            }
         }
     }
 }
