--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,8 +7,8 @@
 
 html,body {
   max-width: 100vw;
-  color: $primary-color;
-  background-color: $secondary-color;
+  color: $secondary-color;
+  background-color: $primary-color;
 }
 
 a {
