--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,4 @@
 // colors
-$primary-color : #222222;
-$secondary-color : #fcfdf4;
+$primary-color : #1C1C1C;
+$secondary-color : #F1F1F1;
 $accent-color : #dc2500;
