--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -1,21 +1,32 @@
 .projects{
-    height: 100vh;
+    min-height: 100vh;
     padding-top: 5rem;
 }
 
 .card {
-    height: 400px;
-    width: 300px;
-    background-color: #FFC901;
-    border: 1.5px solid black;
-    border-radius: 0.5rem;
-    padding: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1rem;
     &__title{
+        position: relative;
+        left: 50%;
+        top :-50%;
+        transform: translate(-50%,-50%);
+        font-weight: 300;
         font-size: 2rem;
+        display: inline-block;
     }
-    &__description {
-        font-size: 20px;
-    }
+}
+
+.card__media, .card__project-data{
+    width: 100%;
+    max-height: 350px;
+    object-fit: cover;
+    background-color: $secondary-color;
+}
+
+.card__media {
+    opacity: 0.8;
 }
 
 .button {
@@ -30,4 +41,25 @@
 .button:hover{
     box-shadow: 3px 3px #000;
     transform: translate(-0.25rem, -0.25rem);
+}
+
+.card__project-data{
+    color: $primary-color;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+
+    &__project-id{
+        text-decoration: underline;
+    }
+    &__project-source{
+        flex-grow: 1;
+        display: flex;
+        justify-content: right;
+        align-items: end;
+        padding: 2rem 0rem;
+    }
+    &__description{
+        text-align: right;
+    }
 }
