--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,30 +1,32 @@
-header{
-    display: flex;
-    justify-content: space-between;
-    /* From https://css.glass */
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
-position: fixed;
-width: 100%;
-border-bottom: 2px solid white;
+header {
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+  /* From https://css.glass */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(11.3px);
 }
 
-header .top-section{
-    padding: 1rem 1rem;
+header .top-section {
+  padding: 1rem 1rem;
 }
-.main-navigation{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
 
-    ul{
-        li{
-            padding: 1rem 1rem;
-            &:hover {
-                background-color: $accent-color;
-                color: $secondary-color;
-            }
-        }
+.main-navigation {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
+  ul {
+    li {
+      padding: 1rem 1rem;
+
+      &:hover {
+        background-color: $accent-color;
+        color: $secondary-color;
+      }
     }
+  }
 }
