--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,4 @@
 @import 'components/marquee.scss';
 @import 'components/card.scss';
 @import 'components/footer.scss';
+@import 'components/socials.scss';
