--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,4 @@
 @import 'components/card.scss';
 @import 'components/footer.scss';
 @import 'components/socials.scss';
+@import 'components/intro.scss'
