--- a/src/styles/components/intro.scss
+++ b/src/styles/components/intro.scss
@@ -6,19 +6,24 @@
     width: 100%;
     height: 100vh;
     font-size: 5rem;
+    display: flex;
     justify-content: center;
     align-items: center;
-    display: none;
+    transform: translateX(100%);
     .text-holder{
         width: 100%;
         text-align: center;
+        transform: translateX(-10%);
         & > *{
             display: inline-block;
         }
     }
     &__greetings{
+        animation: 2s greetings-dash linear ;
     }
     &__wink{
+        animation: 2s wink-dash linear ;
+        transform: translateX(90vw);
     }
 }
 
@@ -27,15 +32,43 @@
 }
 
 .intro {
-    animation: intro 1s linear ;
+    animation: intro 2s linear ;
+    animation-iteration-count: 1;
 }
 
 @keyframes intro {
-    from {
-        transform: scale(1);
+    0% {
+        transform: translateX(0);
     }
-    to{
-        transform: scale(0);
-        display: none;
+
+    70%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(100%);
+    }
+}
+
+@keyframes greetings-dash {
+    0%{
+        transform: translateY(-200%);
+    }
+    50%{
+        transform: translateY(0);
+    }
+    100%{
+
+    }
+}
+
+@keyframes wink-dash {
+    25%{
+        transform: translateX(90vw);
+    }
+    50%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(0);
     }
 }
