--- a/src/styles/components/intro.scss
+++ b/src/styles/components/intro.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    transform: translateX(100%);
+    transform: translateX(150vw);
     .text-holder{
         width: 100%;
         text-align: center;
