--- a/src/styles/components/portfolio.scss
+++ b/src/styles/components/portfolio.scss
@@ -1,25 +1,13 @@
 .portfolio{
+    padding: 0rem 3rem;
     h1{
-        background-color: $primary-color;
-        color: $secondary-color;
-        text-align: center;
-        padding: 1rem 0rem;
-        font-size: 2rem;
-        @include breakpoint (medium){
-            font-size: 3rem;
-        }
-        &::before, &::after{
-            content: '';
-            height: 1.5rem;
-            width: 1.5rem;
-            display: inline-block;
-            background-color: $secondary-color;
-            border-radius: 50%;
-            margin: 0rem 1rem;
-            @include breakpoint (medium){
-                height: 2rem;
-                width: 2rem;
-            }
-        }
+        margin: 0;
+        padding: 3rem 0rem;
+        font-size: 7rem;
+        letter-spacing: -5px;
     }
+}
+
+.projects {
+    min-height: 100vh;
 }
