--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -9,7 +9,7 @@
     &__information{
         padding: 0rem 2rem;
         border-bottom: 2px solid $primary-color;
-        width: 100%;
+        width: 100%x;
     }
 
     &__title{
