--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -1,18 +1,46 @@
 .card {
     display: flex;
-    width: 100%;
+    flex-direction: column;
     margin-bottom: 2rem;
-    img{
-        width: 300px;
-        height: auto;
-    }
-    &__information{
-        padding: 0rem 2rem;
-        border-bottom: 2px solid $primary-color;
-        width: 100%x;
+    @include breakpoint(medium) {
+        flex-direction: row;
+        justify-content: flex-end;
     }
 
+    img{
+        width: 100%;
+        height: auto;
+        @include breakpoint (medium){
+            width: 350px;
+        }
+        @include breakpoint (large){
+            width: 35vw;
+        }
+
+    }
+    &__information{
+        padding: 1rem 1rem 1rem 1rem;
+        width: 100%;
+        border-bottom: 1px solid black;
+
+        p{
+            max-width: 500px;
+        }
+        @include breakpoint (medium){
+            width: 50%;
+            padding: 0rem 0rem 0rem 1rem;
+        }
+    }
+    &__button{
+        color: $secondary-color;
+        padding: 1rem 2rem;
+        border-radius: 5px;
+        margin: 2rem 2rem 0rem 0rem;
+        min-height: fit-content;
+        display: inline-block;
+    }
     &__title{
-        font-size: 2rem;
+        font-size: 3rem;
+        margin-bottom: 1rem;
     }
 }
