--- a/src/styles/gradient-text.scss
+++ b/src/styles/gradient-text.scss
@@ -20,3 +20,10 @@
     -webkit-text-fill-color: transparent;
 }
 
+.gradient-bg-red{
+    background: linear-gradient(to right, #EC0F97 0%, #CF0000 100%);
+}
+
+.gradient-bg-blue{
+    background: linear-gradient(to right, #2269EC 0%, #1DCFCC 100%);
+}
