--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -1,45 +1,52 @@
 .hero {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    flex-direction: column;
+    text-align: left;
+    width: fit-content;
 
-    &__text {
+    &__name , &__focusing {
+        font-size: 5rem;
+        text-transform: uppercase;
+        @include breakpoint (medium){
+            font-size: 10vw;
+        }
+    }
+    &__bottom-text {
+        font-size: 9vw;
+    }
+    &__focusing{
+        display: flex;
         width: 100%;
-
-        h1 {
-            font-size: 2.8rem;
+        flex-direction: column;
+        justify-content: space-between;
+        @include breakpoint (medium){
+            flex-direction: row;
         }
-
-        &__name {
-            font-size: 5rem;
-        }
-
-        &__developer {
-
-        }
-
-        &__shopify {
-
-
-        }
-
-        &__based {
-        }
-
-        @include breakpoint(medium) {
-            width: 45vw;
-        }
-
     }
 
+
+    &__bottom{
+        width: 100%;
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+    .service{
+        font-size: 4rem;
+        @include breakpoint(medium){
+            font-size: 5vw;
+        }
+    }
     .lets-talk {
         padding: 1rem 2rem;
         border-radius: 3rem;
         background-color: $primary-color;
         color: $secondary-color;
-        &::after{
+
+        &::after {
             content: "";
             width: 100%;
             height: 3px;
