feat: second font added

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,7 @@
 @import 'globals';
 @import 'animations';
 @import 'gradient-text.scss';
-
+@import 'fonts.scss';
 
 //components
 @import 'components/header.scss';
