--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,4 @@
 // colors
-$primary-color : #000000;
-$secondary-color : #F1F1F1;
+$secondary-color : #000000;
+$primary-color : #F1F1F1;
 $accent-color : #dc2500;
