--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -21,7 +21,7 @@
     &__information{
         padding: 1rem 1rem 1rem 1rem;
         width: 100%;
-        border-bottom: 1px solid black;
+        border-bottom: 1px solid $primary-color;
 
         p{
             max-width: 500px;
