--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -30,11 +30,11 @@
         }
     }
     &__focusing ,&__location{
-        font-size: 2rem ;
+        font-size: 9vw ;
         padding-right: 1rem;
         text-align: end;
         @include breakpoint (medium ){
-            font-size: 4rem;
+            font-size: 3.5rem;
             padding-right: 3rem;
         }
     }
