--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -1,7 +1,10 @@
 .hero {
     min-height: 100vh;
     padding: 0;
-    padding-top: 100px;
+    padding-top: 150px;
+    @include breakpoint(medium){
+        padding-top: 100px;
+    }
     text-align: center;
     &__content{
         display: flex;
