--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -21,16 +21,17 @@
     &__information{
         padding: 1rem 1rem 1rem 1rem;
         width: 100%;
-        border-bottom: 1px solid $primary-color;
 
         p{
             max-width: 500px;
+            font-weight: 200;
         }
         @include breakpoint (medium){
             width: 50%;
             padding: 0rem 0rem 0rem 1rem;
         }
     }
+
     &__button{
         color: $secondary-color;
         padding: 1rem 2rem;
