--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -33,7 +33,8 @@
     }
 
     &__button{
-        color: $secondary-color;
+        color: $primary-color;
+        border: 1px solid $primary-color;
         padding: 1rem 2rem;
         border-radius: 5px;
         margin: 2rem 1.5rem 0rem 0rem;
