--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,4 +14,5 @@
 @import 'components/card.scss';
 @import 'components/footer.scss';
 @import 'components/socials.scss';
-@import 'components/intro.scss'
+@import 'components/intro.scss';
+@import 'components/tech-stack.scss';
