--- a/src/styles/components/tech-stack.scss
+++ b/src/styles/components/tech-stack.scss
@@ -2,6 +2,7 @@
     min-height: 90vh;
     display: grid;
     grid-template-columns: 1fr;
+    margin-top: 5rem;
     @include breakpoint(large){
         grid-template-columns: 1fr 1fr;
     }
@@ -46,4 +47,8 @@
     height: 100%;
     background-color: $dark-grey;
     text-transform: capitalize;
+    &__title{
+        font-size: 1.25rem;
+        margin-top: 0.5rem;
+    }
 }
